Change region/domain to vagrant-local from global
The hashicorp nomad examples and the command-line default use the
'global' region. To match, I've been using '.global', but 'global' is a
top-level domain and should be avoided for local development. Instead,
make it clear this is a local vagrant env, and the domain should match.
The scripts have been updated to use *.vagrant.local for certificates
and /etc/hosts entries and configs.

--- a/hashicorp/Vagrantfile
+++ b/hashicorp/Vagrantfile
@@ -29,10 +29,12 @@ else
 
   CLUSTER_SIZE = Integer(ENV['CLUSTER_SIZE'])
 
+  DOMAIN='vagrant-local'
+
   servers = [
-    { :name => "hashistack1.global", :ip => "192.168.22.10" },
-    { :name => "hashistack2.global", :ip => "192.168.22.11" },
-    { :name => "hashistack3.global", :ip => "192.168.22.12" },
+    { :name => "hashistack1.#{DOMAIN}", :ip => "192.168.22.10" },
+    { :name => "hashistack2.#{DOMAIN}", :ip => "192.168.22.11" },
+    { :name => "hashistack3.#{DOMAIN}", :ip => "192.168.22.12" },
   ]
 
   servers = servers.first(CLUSTER_SIZE)
