--- a/hashicorp/nomad-cli.env
+++ b/hashicorp/nomad-cli.env
@@ -2,5 +2,5 @@
 
 export NOMAD_ADDR=https://127.0.0.1:4646
 export NOMAD_CACERT=/etc/nomad.d/nomad-agent-ca.pem
-export NOMAD_CLIENT_CERT=/etc/nomad.d/global-cli-nomad.pem
-export NOMAD_CLIENT_KEY=/etc/nomad.d/global-cli-nomad-key.pem
+export NOMAD_CLIENT_CERT=/etc/nomad.d/vagrant-local-cli-nomad.pem
+export NOMAD_CLIENT_KEY=/etc/nomad.d/vagrant-local-cli-nomad-key.pem
