Switch from *.vagrant-local to *.sandbox.local
Reverting recent changes that involved switching to 'vagrant-local'
because I forgot that a wildcard certificate cannot be used on a
top-level domain. We all make rookie mistakes sometimes.

Changes:
- Updated usage from 'vagrant' to 'local' region
- Refactored the Nomad certificate creation to use the 'local' region
- Adjusted configurations to use the new region certificate files
- Made some minor changes related to the certificate-authority script

--- a/hashicorp/Vagrantfile
+++ b/hashicorp/Vagrantfile
@@ -29,7 +29,7 @@ else
 
   CLUSTER_SIZE = Integer(ENV['CLUSTER_SIZE'])
 
-  DOMAIN='vagrant-local'
+  DOMAIN='sandbox.local'
 
   servers = [
     { :name => "hashistack1.#{DOMAIN}", :ip => "192.168.22.10" },
