Add certificate-authority certs to hashicorp VMs
Added synced_folder for ../certificate-authority/certs to all hashicorp
sandbox VMs. Files are copied from host to /certs, then moved to
/usr/share/ca-certificates/systems-sandbox and the then the owner and
permissions are set.

--- a/hashicorp/Vagrantfile
+++ b/hashicorp/Vagrantfile
@@ -69,6 +69,7 @@ else
         end
 
         config.vm.synced_folder ".", "/vagrant", type: "rsync", rsync__exclude: ".git/"
+        config.vm.synced_folder "../certificate-authority/certs", "/certs", type: "rsync", rsync__exclude: ".git/"
 
         config.vm.provision "shell", keep_color: true, path: "init.sh"
 
